--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "matplotlib>=3.10.5",
     "openai>=1.99.9",
     "python-dotenv>=1.1.1",
 ]
